<resources>
    <string name="app_name">VR for Beginners</string>
    <string name="text_dk_one">Development Kit 1</string>
    <string name="text_dk_two">Development Kit 2</string>
    <string name="text_oculus_controllers">Oculus Touch Controllers</string>
    <string-array name="text_vr_names">
        <item name="item_oculus_rift">Oculus Rift</item>
        <item name="item_htc_vive">HTC Vive</item>
        <item name="item_samsung_gear_vr">Samsung Gear VR</item>
        <item name="item_playstation_vr">Playstation VR</item>
        <item name="item_samsung_odyssey">Samsung Odyssey</item>
    </string-array>
    <string-array name="text_vr_companies">
        <item name="item_facebook">Facebook</item>
        <item name="item_htc">HTC</item>
        <item name="item_samsung">Samsung</item>
        <item name="item_sony">Sony</item>
        <item name="item_samsung">Samsung</item>
    </string-array>
    <string name="text_vr_title">VR for Beginners!</string>
    <string name="button_start">Let\'s Start!</string>
    <string name="edit_name">Enter a Name</string>
    <string name="text_welcome">Welcome\u0020</string>
    <string name="text_welcome_em">!</string>
    <string name="image_description">VR Image</string>
    <string name="text_oculus_description">VR headset released on March 28, 2016. Oculus intiated a Kickstarter campaign in 2012 to fund the Rift\'s development. The project proved successful, raising US$2.5 million. In March 2014, Facebook purchased Oculus for $2 billion. The Rift has gone through various pre-production models since the Kickstarter campaign. Two of these models were shipped to backers, labelled as \'development kits\'; the DK1 in mid 2013 and DK2 in mid 2014.</string>
    <string name="text_oculus">Oculus Rift</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_oculus_specs">The Rift has two Pentile OLED displays, 1080x1200 resolution per eye, a 90 Hz refresh rate, and 110 degree field of view. The device also features rotational and positional tracking, and integrated headphones that provide a 3D audio effect.</string>
    <string name="button_description">Description</string>
    <string name="button_specs">Specs</string>
    <string name="button_gallery">Gallery</string>
    <string name="image_oculus_description">Oculus Images</string>
    <string name="hm_vr_name">vr_name</string>
    <string name="text_vive">Vive</string>
    <string name="text_htc">HTC</string>
    <string name="text_vive_description">VR headset released on April 5, 2016. Developed also by Valve Corporation. The headset uses \"room scale\" tracking technology, allowing the user to move in 3D space and use motion-tracked handheld controllers to interact with the environment. Prototypes of the virtual-reality system were demonstrated in 2014, but was first unveiled worldwide during HTC\'s Mobile World Congress keynote in March 2015.</string>
    <string name="text_vive_specs">The Vive has two Pentile OLED displays, 1080x1200 resolution per eye, a 90 Hz refresh rate, and 110 degree field of view. The device has a Lighthouse tracking system that creates a 360 degree virtual space.</string>
    <string name="text_lighthouse">Lighthouse Tracking System</string>
    <string name="text_vive_pro">HTC Vive Pro</string>
    <string name="text_vive_controllers">Vive Controllers</string>
    <string name="text_gearvr">Gear VR</string>
    <string name="text_samsung">Samsung</string>
    <string name="text_gearvr_controller">Gear VR Controller</string>
    <string name="text_gearvr_description">Mobile VR headset released on November 26, 2015, in collaboration with Oculus. When in use, a compatible Samsung Galaxy device acts as the headset\'s display and processor, while the Gear VR unit itself acts as the controller, which contains the field of view, as well as a custom IMU for rotational tracking. Also includes a touchpad and back button on the side, as well as a proximity sensor to detect when the headset is on.</string>
    <string name="text_gearvr_specs">The Gear VR is designed to work with Samsung\'s flagship smartphones using a Super AMOLED as the inserted display, precise head-tracking, low latency, and 96 degree field of view.</string>
    <string name="text_gearvr_phones">Compatible  Phones</string>
    <string name="text_gearvr_inside">Internal Components</string>
    <string name="text_playstation_description">VR headset released on October 13, 2016. Known by the codname Project Morpheus during development, designed to be fully functional with the Playstation 4 home video game console. The Playstation VR system can output a picture to both the Playstation VR and a televsion simultaneously, with the  television either mirroring the picture displayed on the headset, or displaying a separate image for competitive or cooperative gameplay.</string>
    <string name="text_playstation_specs">The PSVR has a 5.7 inch OLED panel, with a display resolution of 1080p. The headset also has a processor box which enables the Social Screen video output to the television, as well as process the 3D audio effect, and uses a 3.5mm headphone jack. The headset also has nine positional LEDs on its surface for the PlayStation Camera to track 360 degree head movement.</string>
    <string name="text_playstationvr">Playstation VR</string>
    <string name="text_sony">Sony</string>
    <string name="text_ps_camera">Playstation Camera</string>
    <string name="text_psvr_move">Playstation Move Controllers</string>
    <string name="text_psvr_pro">Playstation 4 Pro</string>
    <string name="text_odyssey">HMD Odyssey</string>
    <string name="text_odyssey_description">VR headset released on November 6, 2017. On the Microsoft Windows Mixed Reality platform, compatible on Windows 10 PCs that meet the minimum hardware requirements. Installed with two front facing camera that enables 6DoF inside out tracking. This eliminates the need for external tracking beacons. Features an integrated microphone array built directly into the headset, which reduces noise, to communicate clearly and even interact with Cortana.</string>
    <string name="text_odyssey_specs">The Odyssey has a Dual 3.5” AMOLED display, 1440 x 1600 resolution per eye, a 90Hz refresh rate, and 110 degree field of view. Comes with a built-in premium AKG headphones and dual array microphones.</string>
    <string name="text_odyssey_controllers">Motion Controllers</string>
    <string name="text_odyssey_back">Odyssey Back</string>
    <string name="text_odyssey_wmr">Windows Mixed Reality</string>
    <string name="toast_error">Please enter a name</string>
</resources>
